--- a/main.css
+++ b/main.css
@@ -80,6 +80,15 @@ body {
     border-color: #0c9515;
     border-radius: 5px;
 }
+.table7Days {
+    text-align: center;
+    width: 100%;
+    margin-top: 15px;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #ffb200;
+    border-radius: 5px;
+}
 .tableExpired {
     text-align: center;
     width: 100%;
