--- a/main.css
+++ b/main.css
@@ -53,11 +53,12 @@ body {
     border-radius: 5px;
 }
 
-.tileActiv {
+.tileLight {
     text-align: center;
     border-style: solid;
-    border-width: 2px;
-    border-color: #5558ff;
+    border-width: 3px;
+    border-color: #ffffff;
+    background-color: #d5fff4;
     border-radius: 20px;
 }
 
